# 3D-Reconstruction

./: README.md
ElasticFusion-yyy/: build2.sh
ElasticFusion-yyy/Core/src/: CMakeLists.txt
ElasticFusion-yyy/Core/src/Utils/: GPUConfig.h
ElasticFusion-yyy/GUI/src/: CMakeLists.txt  MainController.cpp  MainController.h
ElasticFusion/GUI/src/: MainController.cpp
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
catkin_ws/devel/lib/amin/: listener  talker
catkin_ws/devel/lib/pkgconfig/: amin.pc  procimg.pc  procimg2.pc
catkin_ws/devel/lib/procimg/: procimg
catkin_ws/devel/lib/procimg2/: procimg2
catkin_ws/src/amin/: CMakeLists.txt
catkin_ws/src/amin/src/: listener.cpp  talker.cpp
catkin_ws/src/procimg/: CMakeLists.txt  readme.txt
catkin_ws/src/procimg/src/: reader.cpp
catkin_ws/src/procimg2/: CMakeLists.txt  readme.txt
catkin_ws/src/procimg2/src/: reader.cpp
catkin_ws_zed/: run.sh
catkin_ws_zed/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws_zed/devel/include/zed_wrapper/: ZedConfig.h  reset_odometry.h  reset_odometryRequest.h  reset_odometryResponse.h  reset_tracking.h  reset_trackingRequest.h  reset_trackingResponse.h  (+21 more)
entry/: peizhun.sh  record.sh  rotate.sh  runbag.sh  runoffline.sh  runonline.sh  stop.sh
entry/peizhun/: .11caedd63f79ed94b3dfd516c2cfc5146b423246.cam  bunny.pcd  result.pcd  rotate.pcd
peizhun/: key2.ply  key2_rotate.pcd
ply2pcd/: CMakeLists.txt  main.cpp
reg/: CMakeLists.txt  registration.cpp  result.pcd
reg/raw/: cup2.ply  pc2.ply
rotate/: CMakeLists.txt  matrix_transform.cpp
(+77 files in other folders)
